refactor: proof list schema
